[FIX] darkster ngram table heading readability

--- a/src/sass/bootstrap/darkster.scss
+++ b/src/sass/bootstrap/darkster.scss
@@ -75,3 +75,4 @@ $breadcrumb-active-color:$gray-500;
 
 // Add SASS theme customizations here..
 .navbar-dark.bg-primary {background-color:#111111 !important;}
+.table.able {color:#ccccc5}
